# multiagent-library-migration

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yaml  generate-docs.md  pyproject.toml
ai_docs/: business-rules.md  features.md  gotchas.md  improvements.md  index.md  integrations.md  patterns.md  stack.md
docs/: agent_prompts.md  experiment_evaluation_plan.md  experimental_protocol.md  metrics.md  planner_json_api.md  replication_guide.md
prompts/: diagnosis_agent_v1.md  diagnosis_agent_v2.md  diagnosis_agent_v3.md  implementation_review_agent_v1.md  implementation_review_agent_v2.md  migration_agent_v1.md  migration_agent_v2.md  migration_agent_v4.md  migration_agent_v5.md  planner_v3_symbol_analysis.md  repair_agent_v1.md  repair_agent_v2.md  validation_agent_v1.md  validation_agent_v2.md
scripts/: ab_guidance.py  create_benchmark_task.py  eval_full.py  eval_migration_only.py  eval_planner_only.py  eval_validation_only.py  experiment_utils.py  generate_html_report.py  import_github_project.py  mine_failures.py  prepare_benchmark_project.py  recompute_planner_matrix.py  run_all.py  run_diagnosis.py  run_evaluation_matrix.py  run_migration_matrix.py  run_planner_matrix.py  run_seeds.py  run_task.py  run_validation_matrix.py  summarize_run.py
src/: __init__.py  llm.py  llm_proxy.py  migration_config.py
tests/: test_benchmark_structure.py  test_migration_agent.py  test_migration_config.py  test_planner_v3_agent.py  test_semantic_probe.py  test_source_api.py  test_validation_verdict.py  (+1 more)
(+195 files in other folders)
